--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="take_photo">Take Photo</string>
     <string name="start_capture">Start Capture</string>
     <string name="stop_capture">Stop Capture</string>
+    <string name="delay_timer">Delay Timer</string>
+    <string name="exposure_timer">Exposure Timer</string>
+    <string name="go_go_gadget_camera">Go go gadget camera</string>
 </resources>
