Configured Cam Selection buttons as MaterialButton
and configured OpenShutterActivity intent to include selected camera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="selected_item">Selected Item:</string>
     <string name="camera_selector_back">Rear Camera</string>
     <string name="camera_selector_front">Selfie Camera</string>
+    <string name="cameraSelectedLabelText">Camera to be used: </string>
 </resources>
