--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Smile-Finder</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about_me">About This App</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -28,7 +28,9 @@
     <string name="camera_selector_front">Selfie Camera</string>
     <string name="cameraSelectedLabelText">Camera to be used:</string>
     <string name="smileConfidenceLabelText">How big does everyone need to smile (%):</string>
-
+    <string name="about_button_alt">About</string>
+    <string name="about_dialog">This app is used to take pictures of smiling people. It will only take a picture if everyone is smiling. \n\n Set your preferences and then start taking pictures! \n\n Created by Daniel Ellis</string>
+    <string name="about_title">About this app</string>
 
     <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
     <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
