--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Smile-Finder</string>
+    <string name="app_name">Say Cheese\nSmile Camera</string>
     <string name="action_about_me">About This App</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
